// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prompt > should allow defHook to filter different systems/variables per step 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": "<system1>
First system part
</system1>
<variables>
  <var1>
 value1
  </var1>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Process this",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {},
          "toolCallId": "call_1",
          "toolName": "continue",
          "type": "tool-call",
        },
        {
          "text": "Step 1 response",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "<system2>
Second system part
</system2>
<variables>
  <var2>
 value2
  </var2>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Process this",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Step 1 response",
              "type": "text",
            },
            {
              "input": {},
              "toolCallId": "call_1",
              "toolName": "continue",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "continued": true,
                },
              },
              "toolCallId": "call_1",
              "toolName": "continue",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Step 2 response",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle a complete workflow testing all Prompt class features 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": "<role>
You are a professional database assistant.
</role>
<guidelines>
Always verify data integrity before returning results.
</guidelines>
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "id": 123,
            "query": "getUserById",
          },
          "toolCallId": "call_1",
          "toolName": "database",
          "type": "tool-call",
        },
        {
          "text": "Let me help you with the database query.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "<role>
You are a professional database assistant.
</role>
<guidelines>
Always verify data integrity before returning results.
</guidelines>
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
  <stepInfo>
 Step 1: Querying database
  </stepInfo>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with the database query.",
              "type": "text",
            },
            {
              "input": {
                "id": 123,
                "query": "getUserById",
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "user": {
                    "email": "alice@example.com",
                    "id": 123,
                    "name": "Alice",
                  },
                },
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "data": {
              "name": "Alice",
            },
            "format": "pretty",
          },
          "toolCallId": "call_2",
          "toolName": "formatter",
          "type": "tool-call",
        },
        {
          "text": "Found the user! Now formatting the result.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "<role>
You are a professional database assistant.
</role>
<guidelines>
Always verify data integrity before returning results.
</guidelines>
<variables>
  <userId>
 123
  </userId>
  <environment>
 production
  </environment>
  <config>
database: main_db
timeout: 5000
retries: 3
features:
  caching: true
  logging:
    level: info
    destination: file

  </config>
  <expectedUser>
id: 123
permissions:
  - read
  - write

  </expectedUser>
  <stepInfo>
 Step 2: Formatting results
  </stepInfo>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "I need information about user 123",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with the database query.",
              "type": "text",
            },
            {
              "input": {
                "id": 123,
                "query": "getUserById",
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "user": {
                    "email": "alice@example.com",
                    "id": 123,
                    "name": "Alice",
                  },
                },
              },
              "toolCallId": "call_1",
              "toolName": "database",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Found the user! Now formatting the result.",
              "type": "text",
            },
            {
              "input": {
                "data": {
                  "name": "Alice",
                },
                "format": "pretty",
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "formatted": "User: Alice (alice@example.com)",
                },
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Here is the formatted user information.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle composite agents with defAgent array syntax 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Research quantum computing and analyze the data.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "topic": "quantum computing",
                },
                "name": "researcher",
              },
              {
                "args": {
                  "data": "quantum data",
                },
                "name": "analyst",
              },
            ],
          },
          "toolCallId": "call_agents_1",
          "toolName": "specialists",
          "type": "tool-call",
        },
        {
          "text": "I will delegate to multiple specialist agents.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Research quantum computing and analyze the data.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "I will delegate to multiple specialist agents.",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "topic": "quantum computing",
                    },
                    "name": "researcher",
                  },
                  {
                    "args": {
                      "data": "quantum data",
                    },
                    "name": "analyst",
                  },
                ],
              },
              "toolCallId": "call_agents_1",
              "toolName": "specialists",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "researcher",
                      "response": "Researching quantum computing...Quantum computing uses qubits for computation.",
                      "steps": [
                        {
                          "input": {
                            "prompt": [
                              {
                                "content": [
                                  {
                                    "text": "Research: quantum computing",
                                    "type": "text",
                                  },
                                ],
                                "role": "user",
                              },
                            ],
                          },
                          "output": {
                            "content": [
                              {
                                "text": "Researching quantum computing...Quantum computing uses qubits for computation.",
                                "type": "text",
                              },
                            ],
                            "finishReason": "stop",
                          },
                        },
                      ],
                    },
                    {
                      "name": "analyst",
                      "response": "Analyzing quantum data...Analysis shows promising results.",
                      "steps": [
                        {
                          "input": {
                            "prompt": [
                              {
                                "content": [
                                  {
                                    "text": "Analyze: quantum data",
                                    "type": "text",
                                  },
                                ],
                                "role": "user",
                              },
                            ],
                          },
                          "output": {
                            "content": [
                              {
                                "text": "Analyzing quantum data...Analysis shows promising results.",
                                "type": "text",
                              },
                            ],
                            "finishReason": "stop",
                          },
                        },
                      ],
                    },
                  ],
                },
              },
              "toolCallId": "call_agents_1",
              "toolName": "specialists",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Both agents have completed their tasks.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle composite tools with defTool array syntax 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Please write, append, and then read the file.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "content": "Hello World",
                  "path": "/tmp/test.txt",
                },
                "name": "write",
              },
              {
                "args": {
                  "content": "
Appended line",
                  "path": "/tmp/test.txt",
                },
                "name": "append",
              },
              {
                "args": {
                  "path": "/tmp/test.txt",
                },
                "name": "read",
              },
            ],
          },
          "toolCallId": "call_composite_1",
          "toolName": "file",
          "type": "tool-call",
        },
        {
          "text": "I will perform multiple file operations.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Please write, append, and then read the file.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "I will perform multiple file operations.",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "content": "Hello World",
                      "path": "/tmp/test.txt",
                    },
                    "name": "write",
                  },
                  {
                    "args": {
                      "content": "
Appended line",
                      "path": "/tmp/test.txt",
                    },
                    "name": "append",
                  },
                  {
                    "args": {
                      "path": "/tmp/test.txt",
                    },
                    "name": "read",
                  },
                ],
              },
              "toolCallId": "call_composite_1",
              "toolName": "file",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "write",
                      "result": {
                        "bytesWritten": 11,
                        "success": true,
                      },
                    },
                    {
                      "name": "append",
                      "result": {
                        "bytesWritten": 14,
                        "success": true,
                      },
                    },
                    {
                      "name": "read",
                      "result": {
                        "content": "Hello World
Appended line",
                      },
                    },
                  ],
                },
              },
              "toolCallId": "call_composite_1",
              "toolName": "file",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "All file operations completed successfully!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle defAgent to create a sub-prompt with its own model 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "I need detailed research on quantum computing.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "depth": "detailed",
            "topic": "quantum computing",
          },
          "toolCallId": "call_agent_1",
          "toolName": "researchAgent",
          "type": "tool-call",
        },
        {
          "text": "Let me delegate this task to a specialist agent.",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "I need detailed research on quantum computing.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me delegate this task to a specialist agent.",
              "type": "text",
            },
            {
              "input": {
                "depth": "detailed",
                "topic": "quantum computing",
              },
              "toolCallId": "call_agent_1",
              "toolName": "researchAgent",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "agentSteps": [
                {
                  "input": {
                    "prompt": [
                      {
                        "content": [
                          {
                            "text": "Please research <researchTopic> with <researchDepth> level of detail.",
                            "type": "text",
                          },
                        ],
                        "role": "user",
                      },
                    ],
                  },
                  "output": {
                    "content": [
                      {
                        "text": "Analyzing quantum computing in depth...Quantum computing uses qubits and superposition principles for computation.",
                        "type": "text",
                      },
                    ],
                    "finishReason": "stop",
                  },
                },
              ],
              "output": {
                "type": "text",
                "value": "Analyzing quantum computing in depth...Quantum computing uses qubits and superposition principles for computation.",
              },
              "toolCallId": "call_agent_1",
              "toolName": "researchAgent",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "The research agent has completed the analysis.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle errors in composite agent sub-calls gracefully 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the agents.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "input": "test",
                },
                "name": "working",
              },
              {
                "args": {
                  "input": "fail",
                },
                "name": "failing",
              },
            ],
          },
          "toolCallId": "call_agents_error_1",
          "toolName": "agents",
          "type": "tool-call",
        },
        {
          "text": "Delegating to agents...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the agents.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Delegating to agents...",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "input": "test",
                    },
                    "name": "working",
                  },
                  {
                    "args": {
                      "input": "fail",
                    },
                    "name": "failing",
                  },
                ],
              },
              "toolCallId": "call_agents_error_1",
              "toolName": "agents",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "working",
                      "response": "Working agent response.",
                      "steps": [
                        {
                          "input": {
                            "prompt": [
                              {
                                "content": [
                                  {
                                    "text": "Process: test",
                                    "type": "text",
                                  },
                                ],
                                "role": "user",
                              },
                            ],
                          },
                          "output": {
                            "content": [
                              {
                                "text": "Working agent response.",
                                "type": "text",
                              },
                            ],
                            "finishReason": "stop",
                          },
                        },
                      ],
                    },
                    {
                      "name": "failing",
                      "response": "Error: Agent execution failed",
                    },
                  ],
                },
              },
              "toolCallId": "call_agents_error_1",
              "toolName": "agents",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Agent tasks completed with some errors.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should handle errors in composite tool sub-calls gracefully 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the operations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "calls": [
              {
                "args": {
                  "value": 1,
                },
                "name": "success",
              },
              {
                "args": {
                  "value": 2,
                },
                "name": "fail",
              },
              {
                "args": {
                  "value": 3,
                },
                "name": "success",
              },
            ],
          },
          "toolCallId": "call_error_1",
          "toolName": "operations",
          "type": "tool-call",
        },
        {
          "text": "Executing operations...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Run the operations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Executing operations...",
              "type": "text",
            },
            {
              "input": {
                "calls": [
                  {
                    "args": {
                      "value": 1,
                    },
                    "name": "success",
                  },
                  {
                    "args": {
                      "value": 2,
                    },
                    "name": "fail",
                  },
                  {
                    "args": {
                      "value": 3,
                    },
                    "name": "success",
                  },
                ],
              },
              "toolCallId": "call_error_1",
              "toolName": "operations",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    {
                      "name": "success",
                      "result": {
                        "result": "ok",
                      },
                    },
                    {
                      "name": "fail",
                      "result": {
                        "error": "Intentional failure",
                      },
                    },
                    {
                      "name": "success",
                      "result": {
                        "result": "ok",
                      },
                    },
                  ],
                },
              },
              "toolCallId": "call_error_1",
              "toolName": "operations",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Operations finished with some errors.",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Prompt > should support activeSystems and activeVariables in defHook 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": "<role>
You are a helpful assistant.
</role>
<expertise>
You are an expert in TypeScript and Node.js.
</expertise>
<variables>
  <userName>
 Alice
  </userName>
  <config>
theme: dark
language: en

  </config>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello!",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Processing with filtered context...",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;
